[tool.poetry]
name = "suntractor"
version = "0.0.0"
description = "Subtract the Sun from radio interferometric visibilities."
authors = ["Alec Thomson"]
license = "MIT"
readme = "README.md"
packages = [{include = "suntractor"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
astropy = "^5"
python-casacore = "*"
spython = "*"
potato = {git = "https://gitlab.com/Sunmish/potato.git"}
tqdm = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
suntractor = "suntractor:cli"

